# learning-kit

./: .gitignore  .nb-gradle-properties  2-starting-out.hs  5-recursion.hs  AUTHORS  CMakeLists.txt  LICENSE  Makefile  Makefile.in  README  README.markdown  README.md  Sudoku.sln  TODO  build.gradle  config.h  config.h.in  configure  configure.ac  kcalc.c  kcalc.cpp  kcalc.h  kcalc.l  kcalc.tab.c  kcalc.y  lexer.c  lexer.h  lexer.l  lexyy.c  lexyy.cpp  makefile  parser.c  parser.h  parser.output  parser.y  pom.xml  priority.txt  settings.gradle  sudoku.c
99-haskell/: 01.hs  02.hs  04.hs  05.hs  09.hs  10.hs  11.hs  12.hs  13.hs  16.hs  17.hs  19.hs  README.md
99-haskell-problems/: 08.hs  11.hs  15.hs  19.hs
Sudoku/: AboutBox.Designer.cs  AboutBox.cs  Advice.Designer.cs  Advice.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  SelectLevel.Designer.cs  SelectLevel.cs  SelectNumberForm.Designer.cs  SelectNumberForm.cs  Sudoku.csproj
Sudoku/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Sudoku/SudokuImpl/: FieldBacktrack.cs  FieldPosition.cs  Sudoku.cs  SudokuField.cs
Sudoku/UndoRedoImpl/: StackField.cs  UndoRedo.cs
acm/2015-fel-cvut/: cheetahs.hs
algorithms/: eratostenes.hs
codewars/6kyu-wind-calculation/: wind.hs
codewars/7kyu-complementary-dna/: description.md
codewars/7kyu-no-oddities-here/: solution.hs
codewars/8kyu-broken-greetings/: description.md
codewars/8kyu-multiply/: solution.java
codewars/8kyu-square-n-sum/: description.md
codility/2013-11-carbon/: build.xml
codility/2013-12-nitrogenium/: build.xml  zadanie.txt
codility/2014-01-oxygenium/: build.xml
codility/2014-02-fluorum/: build.xml
codility/2014-03-neon/: build.xml
codility/2014-03-neon-c++/: main.cpp
codility/2014-04-06-natrium/: build.xml
codility/2014-06-magnesium/: build.xml
codility/2014-sulphur/: build.xml
components/: ball.h  leftPlayer.h  player.cpp  player.h  rightPlayer.h  rightWall.h
coursera/big-data-analysis/: README.md
coursera/functional-design-scala/: README.md
coursera/functional-principles-scala/: README.md
examples/: 01_sudoku normal.txt  02_sudoku easy.txt  03_sudoku extreme.txt  04_sudoku normal.txt  05_sudoku normal.txt  06_sudoku sutaz.txt  07_sudoku sutaz.txt  08_sudoku sutaz.txt  09_sudoku extreme.txt  10_viac rieseni.txt  11_sudoku extremeee.txt  11_teuflisch1.txt  dragon-war.game
graphics/: CMakeLists.txt  CTestTestfile.cmake  ball.cpp  ball.h  canvas.cpp  canvas.h  component.cpp  component.h  player.cpp  player.h  players.cpp  players.h  synchronization.h  table.cpp  table.h  wall.cpp  wall.h
hackerrank/WOC/: README.md
lambdaconf-2018/: README.md  blazing-fast-io.md  category-theory.md
learn-you-a-haskell-exercises/: 5-recursion.hs  6-higher-order-functions.hs  7-modules.hs  9-input-and-output.hs  DistanceConversions.hs
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile.am  Makefile.in  ball.cpp  ball.h  game.cpp  game.h  kcalc.c  lexer.c  lexer.h  lexer.l  main.cpp  parser.c  parser.h  parser.y  player.cpp  player.h  players.h  rightPlayer.cpp  rightWall.cpp  synchronization.h  table.cpp  upperWall.h  wall.h
src/include/: kcalc.h  lecalc.h
src/main/groovy/storyteller/: Board.groovy  Engine.groovy  Game.groovy  GameObject.groovy  GameObjectBuilder.java  Main.java  MainDialog.form  MainDialog.java  MainMenuRoom.groovy  Menu.groovy  Player.groovy  Room.groovy  RoomBuilder.groovy  RoomCanvas.groovy
src/main/groovy/storyteller/gamemodel/: Engine.groovy  Game.groovy  GameObjectBuilder.java
src/main/groovy/storyteller/gui/: Board.groovy  Defaults.java  DialogComponent.java  MainDialog.form  MainDialog.java  MainWindow.java  Menu.groovy  Option.groovy  RoomComponent.groovy  VisibleObject.groovy
src/main/groovy/storyteller/menu/: DialogComponent.java  Label.groovy  MainMenuRoom.groovy  Menu.groovy  SelectGameRoom.groovy
src/main/groovy/storyteller/rooms/: GameRoom.groovy  MainMenuRoom.groovy  SelectGameRoom.groovy
src/main/java/cz/zoom/whiteboard/: Boundary.java  CommandLineParser.java  ConnectionDetails.java  Group.java  IOUtils.java  JiraAdapter.java  JiraIssue.java  Main.java  QRCode.java  Task.java  TaskException.java  TaskFactory.java  TaskTransformations.java  Tasks.java  TasksFactory.java
src/main/java/cz/zoom/whiteboard/cmdline/: Boundary.java  Bounds.java  Command.java  CommandLine.java  CommandLineComposite.java  CommandLineMediator.java  CommandLineParser.java  CreateIssues.java  DecodePNG.java  LaunchWhiteboard.java  Locate.java  Render.java  RenderYAML.java  SprintByID.java  SprintByIssue.java  StoryIssues.java
src/main/java/cz/zoom/whiteboard/commands/: CheckIssues.java  CreateIssues.java  DecodePNG.java  FindGroup.java  LaunchWhiteboard.java  OpenIssuesByID.java  OpenIssuesByKey.java  RenderGroup.java  RenderTasks.java  UpdateIssues.java
src/main/java/cz/zoom/whiteboard/decoder/: CameraCanvas.java  ImageFilters.java  TaskDecoder.java  TasksTableModel.java  WebcamComboboxModel.java  Whiteboard.form  Whiteboard.java
src/main/java/cz/zoom/whiteboard/generator/: Task.java  TaskGenerator.java  TaskParser.java
src/main/java/cz/zoom/whiteboard/task/: Task.java  TaskException.java  TaskFactory.java  Tasks.java  TasksFactory.java
src/test/groovy/storyteller/: BoardTest.groovy  EngineTest.groovy  GameObjectBuilderTest.groovy  GameTest.groovy  RoomBuilderTest.groovy
src/test/groovy/storyteller/gamemodel/: GameObjectBuilderTest.groovy
src/test/java/cz/zoom/whiteboard/cmdline/: CommandLineParserTest.java
story-teller/: .gitignore
sudoku-csharp/: LICENSE  Sudoku.sln
test/: CMakeLists.txt  unitTests.cpp
toy-projects/calculators/c/: config.h  config.h.in  configure  configure.ac
toy-projects/calculators/c/src/: Makefile.am  Makefile.in  parser.y
toy-projects/turbo-pong/src/: CMakeLists.txt  CTestTestfile.cmake  game.h
turbo-pong/: CMakeLists.txt  CTestTestfile.cmake
turbo-pong/components/: CTestTestfile.cmake  bottomWall.cpp  component.cpp  leftWall.h
turbo-pong/doc/: dynamika_SHB.ppt
turbo-pong/test/: CTestTestfile.cmake  unit-tests
(+694 files in other folders)
